--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,11 @@
 :root {
-  --max-width: 1100px;
+  --wrapper-max-width: 1200px;
+  --font-s: 16px;
+  --font-m: 24px;
+  --font-b: 32px;
   --border-radius: 12px;
+  --cta-collor: #2962FF;
+  --cta-text-collor: #fff;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
