--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,18 +1,17 @@
 .button {
-  background-color: rgb(1, 125, 252);
+  background-color: var(--cta-collor);
   border: none;
   border-radius: 20px;
-  color: #fff;
+  color: var(--cta-text-collor);
   cursor: pointer;
   display: inline-block;
-  font-size: 16px;
+  font-size: var(--font-s);
   font-weight: 600;
   line-height: 1;
   padding: 10px 20px;
   transition: all 0.3s ease-in-out;
   
   &:hover {
-    background-color: rgb(1, 125, 252, 0.8);
-    box-shadow: #909090 0 0 10px 0;  
+    box-shadow: #909090 0 0 10px 0;
   }
 }
