--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,7 @@
   .wrapper {
     width: 100%;
     height: 100%;
-    max-width: 1200px;
+    max-width: var(--wrapper-max-width);
     margin: 0 auto;
     
     display: flex;
@@ -24,12 +24,12 @@
         a {
           color: #222;
           font-weight: 600;
-          font-size: 16px;
+          font-size: var(--font-s);
         }
       }
       
       &:first-child {
-        font-size: 24px;
+        font-size: var(--font-m);
         vertical-align: center;
         margin: auto;
         text-align: inherit;
