--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,14 +11,14 @@
   .cta {
     max-width: 1000px;
     h2 {
-      font-size: 60px;
+      font-size: 36px;
+      color: #ECECEC;
     }
 
     p {
-      font-size: 36px;
+      font-size: 24px;
+      color: #B0BEC5;
     }
-
-
   }
 
   header {
@@ -56,7 +56,7 @@
           vertical-align: center;
           margin: auto;
           text-align: inherit;
-          color: #303030;
+          color: #ECECEC;
         }
 
         &:last-child {
